--- a/.gitignore
+++ b/.gitignore
@@ -141,3 +141,11 @@ hs_err_pid*
 replay_pid*
 
 # End of https://www.toptal.com/developers/gitignore/api/java,intellij
+
+#Archetype
+/target/
+/lab-client/target/
+/lab-common/target/
+/lab-server/target/
+*.iml
+.idea
