--- a/client/pom.xml
+++ b/client/pom.xml
@@ -7,7 +7,7 @@
         <artifactId>p.lab6</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <artifactId>lab-client</artifactId>
+    <artifactId>client</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>lab-client</name>
 
