--- a/common/pom.xml
+++ b/common/pom.xml
@@ -7,9 +7,9 @@
         <artifactId>p.lab6</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <artifactId>lab-server</artifactId>
+    <artifactId>common</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>lab-server</name>
+    <name>lab-common</name>
 
     <build>
         <plugins>
@@ -31,12 +31,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <configuration>
-                    <archive>
-                        <manifest>
-                            <addClasspath>true</addClasspath>
-                            <mainClass>${project.groupId}.server.Server</mainClass>
-                        </manifest>
-                    </archive>
                     <descriptorRefs>
                         <descriptorRef>jar-with-dependencies</descriptorRef>
                     </descriptorRefs>
@@ -54,15 +48,5 @@
 
         </plugins>
     </build>
-
-    <dependencies>
-
-        <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>lab-common</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-
-    </dependencies>
 
 </project>
