--- a/server/pom.xml
+++ b/server/pom.xml
@@ -7,9 +7,9 @@
         <artifactId>p.lab6</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <artifactId>lab-common</artifactId>
+    <artifactId>server</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>lab-common</name>
+    <name>lab-server</name>
 
     <build>
         <plugins>
@@ -31,6 +31,12 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <configuration>
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <mainClass>${project.groupId}.server.Server</mainClass>
+                        </manifest>
+                    </archive>
                     <descriptorRefs>
                         <descriptorRef>jar-with-dependencies</descriptorRef>
                     </descriptorRefs>
@@ -48,5 +54,15 @@
 
         </plugins>
     </build>
+
+    <dependencies>
+
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>lab-common</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+    </dependencies>
 
 </project>
