--- a/client/pom.xml
+++ b/client/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <artifactId>client</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>lab-client</name>
+    <name>client</name>
 
     <build>
         <plugins>
@@ -54,7 +54,7 @@
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>lab-common</artifactId>
+            <artifactId>common</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
