--- a/common/pom.xml
+++ b/common/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <artifactId>common</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>lab-common</name>
+    <name>common</name>
 
     <build>
         <plugins>
