--- a/server/pom.xml
+++ b/server/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <artifactId>server</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>lab-server</name>
+    <name>server</name>
 
     <build>
         <plugins>
@@ -59,7 +59,7 @@
 
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>lab-common</artifactId>
+            <artifactId>common</artifactId>
             <version>${project.version}</version>
         </dependency>
 
